hw3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    env: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
